fixed page overflow

--- a/src/sass/blocks/benefits.scss
+++ b/src/sass/blocks/benefits.scss
@@ -109,6 +109,10 @@
     flex-wrap: wrap;
     margin-left: -20px;
     margin-right: -20px;
+    @include media-breakpoint-down(lg) {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
   }
 
   &__item {
